--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -102,6 +102,65 @@ Resources:
                 OAuthToken: !Ref GitHubToken
               RunOrder: 1
 
+        - Name: PipelineDeploy
+          Actions:
+            - Name: CreateUpdatePipeline
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: 1
+              InputArtifacts:
+                - Name: SourceCodeOutputArtifact
+              Configuration:
+                ActionMode: CREATE_UPDATE
+                Capabilities: CAPABILITY_IAM
+                RoleArn: !ImportValue CloudFormationRole
+                StackName: !Sub ${AWS::StackName}-${Environment}-pipeline
+                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/pipeline/pipeline.yaml
+
+        - Name: GlobalStack
+          Actions:
+            - Name: CreateUpdateGlobalResources
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              InputArtifacts:
+                - Name: SourceCodeOutputArtifact
+              Configuration:
+                ActionMode: CHANGE_SET_REPLACE
+                Capabilities: CAPABILITY_NAMED_IAM
+                RoleArn: !ImportValue CloudFormationRole
+                StackName: !Sub ${AWS::StackName}-${Environment}-global
+                ChangeSetName: vpcchangeset
+                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/global/global.yaml
+              RunOrder: 1
+
+        - Name: VpcUpdateStack
+          Actions:
+            - Name: CreateUpdateVpcStack
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              InputArtifacts:
+                - Name: SourceCodeOutputArtifact
+              Configuration:
+                ActionMode: CHANGE_SET_REPLACE
+                Capabilities: CAPABILITY_NAMED_IAM
+                RoleArn: !ImportValue CloudFormationRole
+                StackName: !Sub ${AWS::StackName}-${Environment}-vpc
+                ChangeSetName: vpcchangeset
+                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/vpc/vpc.yaml
+                ParameterOverrides: !Sub >
+                  {
+                    "Environment": "${Environment}",
+                  }
+              RunOrder: 1
+        
         - Name: Build
           Actions:
             - Name: CodeBuild
@@ -116,25 +175,6 @@ Resources:
                 - Name: BuildOutputArtifact
               Configuration:
                 ProjectName: !Ref CodeBuildProject
-              RunOrder: 1
-
-        - Name: VpcUpdateStack
-          Actions:
-            - Name: VpcResourcesChangeStack
-              ActionTypeId:
-                Category: Deploy
-                Owner: AWS
-                Provider: CloudFormation
-                Version: '1'
-              InputArtifacts:
-                - Name: BuildOutputArtifact
-              Configuration:
-                ActionMode: CHANGE_SET_REPLACE
-                Capabilities: CAPABILITY_NAMED_IAM
-                RoleArn: !ImportValue CloudFormationRole
-                StackName: !Sub ${AWS::StackName}-${Environment}-vpc
-                ChangeSetName: vpcchangeset
-                TemplatePath: BuildOutputArtifact::configuration/cloudformation/vpc/vpc.yaml
               RunOrder: 1
 
 Outputs:
