Fix buildspec location

--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -71,6 +71,7 @@ Resources:
         Type: LINUX_CONTAINER
       Source:
         Type: CODEPIPELINE
+        BuildSpec: server/buildspec.yml
       Artifacts:
         Type: CODEPIPELINE
       TimeoutInMinutes: 120
