--- a/configuration/cloudformation/infra/vpc.yaml
+++ b/configuration/cloudformation/infra/vpc.yaml
@@ -29,7 +29,7 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-vpc"
+          Value: !Sub "${AWS::StackName}-${Environment}-vpc"
 
   ####### Create Subnets #######
   PublicSubnetOne:
@@ -41,7 +41,7 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-public-subnet
+          Value: !Sub ${AWS::StackName}-${Environment}-public-subnet
   
   PrivateSubnetOne:
     Type: AWS::EC2::Subnet
@@ -52,7 +52,7 @@ Resources:
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-private-subnet
+          Value: !Sub ${AWS::StackName}-${Environment}-private-subnet
 
   ######## Create Internet gateway and Attach Internet Gateway to VPC #######
   InternetGateway:
@@ -60,7 +60,7 @@ Resources:
     Properties:
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-internet-gw"
+          Value: !Sub "${AWS::StackName}-${Environment}-internet-gw"
 
   InternetGatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
@@ -132,14 +132,14 @@ Resources:
     Properties:
       Type: network
       Scheme: internal
-      Name: !Sub "${AWS::StackName}-private-nlb"
+      Name: !Sub "${AWS::StackName}-${Environment}-private-nlb"
       Subnets:
         - !Ref PrivateSubnetOne
 
   NLBTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub ${AWS::StackName}-target-group
+      Name: !Sub ${AWS::StackName}-${Environment}-target-group
       Port: 80
       Protocol: TCP
       TargetType: ip
@@ -167,40 +167,40 @@ Outputs:
     Description: A reference to the created VPC
     Value: !Ref VPC
     Export:
-      Name: !Sub '${AWS::StackName}-VPC'
+      Name: !Sub '${AWS::StackName}-${Environment}-VPC'
 
   PublicSubnets:
     Description: A list of the public subnets
     Value: !Join [",", [!Ref PublicSubnetOne]]
     Export:
-      Name: !Sub '${AWS::StackName}:PublicSubnets'
+      Name: !Sub '${AWS::StackName}-${Environment}:PublicSubnets'
       
   PrivateSubnets:
     Description: A list of the private subnets
     Value: !Join [",", [!Ref PrivateSubnetOne]]
     Export:
-      Name: !Sub '${AWS::StackName}-PrivateSubnets'
+      Name: !Sub '${AWS::StackName}-${Environment}-PrivateSubnets'
 
   PublicSubnetOne:
     Description: A reference to the public subnet in the 1st Availability Zone
     Value: !Ref PublicSubnetOne
     Export:
-      Name: !Sub '${AWS::StackName}-PublicSubnetOne'
+      Name: !Sub '${AWS::StackName}-${Environment}-PublicSubnetOne'
 
   PrivateSubnetOne:
     Description: A reference to the private subnet in the 1st Availability Zone
     Value: !Ref PrivateSubnetOne
     Export:
-      Name: !Sub '${AWS::StackName}-PrivateSubnetOne'
+      Name: !Sub '${AWS::StackName}-${Environment}-PrivateSubnetOne'
 
   PrivateRouteTableOne:
     Description: A reference to the private route table in the 1st Availability Zone
     Value: !Ref PrivateRouteTableOne
     Export:
-      Name: !Sub ${AWS::StackName}-PrivateRouteTableOne
+      Name: !Sub ${AWS::StackName}-${Environment}-PrivateRouteTableOne
 
   NLBListener:
     Description: A reference to the private route table in the 1st Availability Zone
     Value: !Ref NLBListener
     Export:
-      Name: !Sub ${AWS::StackName}-NLBListener
+      Name: !Sub ${AWS::StackName}-${Environment}-NLBListener
