--- a/configuration/cloudformation/infra/vpc.yaml
+++ b/configuration/cloudformation/infra/vpc.yaml
@@ -7,10 +7,13 @@ Description:
   and default routes for them in the private subnets.
 
 Parameters:
-    Environment:
-      Description: An environment name that will be passed onto aws services
-      Type: String
-      Default: development
+  Environment:
+    Description: An environment name that will be passed onto aws services
+    Type: String
+    Default: development
+  AppName:
+    Type: String
+    Description: "Name of the application"
 
 Mappings:
   SubnetConfig:
@@ -29,7 +32,7 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-${Environment}-vpc"
+          Value: !Sub "${AppName}-${Environment}-vpc"
 
   ####### Create Subnets #######
   PublicSubnetOne:
@@ -41,7 +44,7 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-${Environment}-public-subnet
+          Value: !Sub ${AppName}-${Environment}-public-subnet
   
   PrivateSubnetOne:
     Type: AWS::EC2::Subnet
@@ -52,7 +55,7 @@ Resources:
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Sub ${AWS::StackName}-${Environment}-private-subnet
+          Value: !Sub ${AppName}-${Environment}-private-subnet
 
   ######## Create Internet gateway and Attach Internet Gateway to VPC #######
   InternetGateway:
@@ -60,7 +63,7 @@ Resources:
     Properties:
       Tags:
         - Key: Name
-          Value: !Sub "${AWS::StackName}-${Environment}-internet-gw"
+          Value: !Sub "${AppName}-${Environment}-internet-gw"
 
   InternetGatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
@@ -132,14 +135,14 @@ Resources:
     Properties:
       Type: network
       Scheme: internal
-      Name: !Sub "${AWS::StackName}-${Environment}-private-nlb"
+      Name: !Sub "${AppName}-${Environment}-private-nlb"
       Subnets:
         - !Ref PrivateSubnetOne
 
   NLBTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub ${AWS::StackName}-${Environment}-target-group
+      Name: !Sub ${AppName}-${Environment}-target-group
       Port: 80
       Protocol: TCP
       TargetType: ip
@@ -167,40 +170,40 @@ Outputs:
     Description: A reference to the created VPC
     Value: !Ref VPC
     Export:
-      Name: !Sub '${AWS::StackName}-${Environment}-VPC'
+      Name: !Sub '${AppName}-${Environment}-VPC'
 
   PublicSubnets:
     Description: A list of the public subnets
     Value: !Join [",", [!Ref PublicSubnetOne]]
     Export:
-      Name: !Sub '${AWS::StackName}-${Environment}:PublicSubnets'
+      Name: !Sub '${AppName}-${Environment}:PublicSubnets'
       
   PrivateSubnets:
     Description: A list of the private subnets
     Value: !Join [",", [!Ref PrivateSubnetOne]]
     Export:
-      Name: !Sub '${AWS::StackName}-${Environment}-PrivateSubnets'
+      Name: !Sub '${AppName}-${Environment}-PrivateSubnets'
 
   PublicSubnetOne:
     Description: A reference to the public subnet in the 1st Availability Zone
     Value: !Ref PublicSubnetOne
     Export:
-      Name: !Sub '${AWS::StackName}-${Environment}-PublicSubnetOne'
+      Name: !Sub '${AppName}-${Environment}-PublicSubnetOne'
 
   PrivateSubnetOne:
     Description: A reference to the private subnet in the 1st Availability Zone
     Value: !Ref PrivateSubnetOne
     Export:
-      Name: !Sub '${AWS::StackName}-${Environment}-PrivateSubnetOne'
+      Name: !Sub '${AppName}-${Environment}-PrivateSubnetOne'
 
   PrivateRouteTableOne:
     Description: A reference to the private route table in the 1st Availability Zone
     Value: !Ref PrivateRouteTableOne
     Export:
-      Name: !Sub ${AWS::StackName}-${Environment}-PrivateRouteTableOne
+      Name: !Sub ${AppName}-${Environment}-PrivateRouteTableOne
 
   NLBListener:
     Description: A reference to the private route table in the 1st Availability Zone
     Value: !Ref NLBListener
     Export:
-      Name: !Sub ${AWS::StackName}-${Environment}-NLBListener
+      Name: !Sub ${AppName}-${Environment}-NLBListener
