Pass git info to pipeline-prod

--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -121,6 +121,10 @@ Resources:
                   {
                     "Environment": "${Environment}",
                     "AppName" : "${AppName}",
+                    "GitHubRepoOwner" : ${GitHubRepoOwner},
+                    "GitHubRepoName" : ${GitHubRepoName},
+                    "GitHubBranch" : ${GitHubBranch},
+                    "GitHubToken" : ${GitHubToken} 
                   }
 
         - Name: GlobalStack
