--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -101,9 +101,9 @@ Resources:
                 OAuthToken: !Ref GitHubToken
               RunOrder: 1
 
-        - Name: PipelineDeploy
+        - Name: ConfigurationStackUpdates
           Actions:
-            - Name: CreateUpdatePipeline
+            - Name: UpdatePipeline
               ActionTypeId:
                 Category: Deploy
                 Owner: AWS
@@ -112,44 +112,23 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CHANGE_SET_REPLACE
-                Capabilities: CAPABILITY_IAM
-                RoleArn: !ImportValue CloudFormationRole
-                ChangeSetName: pipelinechangeset
-                StackName: !Sub ${AppName}-${Environment}-pipeline
-                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/pipeline/pipeline-prod.yaml
-                ParameterOverrides: !Sub >
-                  {
-                    "Environment": "${Environment}",
-                    "AppName" : "${AppName}",
-                    "GitHubRepoOwner" : ${GitHubRepoOwner},
-                    "GitHubRepoName" : ${GitHubRepoName},
-                    "GitHubBranch" : ${GitHubBranch},
-                    "GitHubToken" : ${GitHubToken}
-                  }
-              RunOrder: '1'
-        - Name: GlobalStack
-          Actions:
-            - Name: CreateUpdateGlobalResources
-              ActionTypeId:
-                Category: Deploy
-                Owner: AWS
-                Provider: CloudFormation
-                Version: '1'
-              InputArtifacts:
-                - Name: SourceCodeOutputArtifact
-              Configuration:
-                ActionMode: CHANGE_SET_REPLACE
+                ActionMode: CREATE_UPDATE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !ImportValue CloudFormationRole
-                StackName: !Sub ${AppName}-${Environment}-global
-                ChangeSetName: vpcchangeset
-                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/global/global.yaml
+                StackName: !Sub ${AWS::StackName}
+                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/pipeline/pipeline-prod.yaml
+                ParameterOverrides: !Sub |
+                  {
+                    "AppName" : "${AppName}",
+                    "Environment": "${Environment}",
+                    "GitHubRepoOwner" : "${GitHubRepoOwner}",
+                    "GitHubRepoName" : "${GitHubRepoName}",
+                    "GitHubBranch" : "${GitHubBranch}",
+                    "GitHubToken" : "${GitHubToken}"
+                  }
               RunOrder: 1
 
-        - Name: VpcUpdateStack
-          Actions:
-            - Name: CreateUpdateVpcStack
+            - Name: UpdateVpcStack
               ActionTypeId:
                 Category: Deploy
                 Owner: AWS
@@ -158,16 +137,16 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CHANGE_SET_REPLACE
+                ActionMode: CREATE_UPDATE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !ImportValue CloudFormationRole
                 StackName: !Sub ${AppName}-${Environment}-vpc
-                ChangeSetName: vpcchangeset
-                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/vpc/vpc.yaml
-                ParameterOverrides: !Sub >
+                #ChangeSetName: vpcchangeset
+                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/infra/vpc.yaml
+                ParameterOverrides: !Sub |
                   {
                     "Environment": "${Environment}",
-                    "AppName" : "${AppName}",
+                    "AppName" : "${AppName}"
                   }
               RunOrder: 1
         
