--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -112,9 +112,10 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CREATE_UPDATE
+                ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !ImportValue CloudFormationRole
+                ChangeSetName: pipelinechangeset
                 StackName: !Sub ${AWS::StackName}
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/pipeline/pipeline-prod.yaml
                 ParameterOverrides: !Sub |
@@ -128,6 +129,23 @@ Resources:
                   }
               RunOrder: 1
 
+            - Name: GlobalResources
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              InputArtifacts:
+                - Name: SourceCodeOutputArtifact
+              Configuration:
+                ActionMode: CHANGE_SET_REPLACE
+                Capabilities: CAPABILITY_NAMED_IAM
+                RoleArn: !ImportValue CloudFormationRole
+                StackName: !Sub ${AppName}-${Environment}-global
+                ChangeSetName: globalchangeset
+                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/global/global.yaml
+              RunOrder: 1
+
             - Name: UpdateVpcStack
               ActionTypeId:
                 Category: Deploy
@@ -137,18 +155,18 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CREATE_UPDATE
+                ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !ImportValue CloudFormationRole
                 StackName: !Sub ${AppName}-${Environment}-vpc
-                #ChangeSetName: vpcchangeset
+                ChangeSetName: vpcchangeset
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/infra/vpc.yaml
                 ParameterOverrides: !Sub |
                   {
                     "Environment": "${Environment}",
                     "AppName" : "${AppName}"
                   }
-              RunOrder: 1
+              RunOrder: 3
         
         - Name: Build
           Actions:
