fix updates for global, vpc elb-target-group name

--- a/configuration/cloudformation/infra/vpc.yaml
+++ b/configuration/cloudformation/infra/vpc.yaml
@@ -142,7 +142,7 @@ Resources:
   NLBTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: !Sub ${AppName}-${Environment}-target-group
+      Name: !Sub ${AppName}-${Environment}-tr-grp
       Port: 80
       Protocol: TCP
       TargetType: ip
