--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -52,7 +52,7 @@ Resources:
   CodeBuildRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub ${AWS::StackName}-${Environment}-CodeBuild-role
+      RoleName: !Sub ${AWS::StackName}-${Environment}-codebuild-role
       AssumeRolePolicyDocument:
         Statement:
           - Action: ['sts:AssumeRole']
@@ -68,7 +68,7 @@ Resources:
   CodePipelineRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub ${AWS::StackName}-${Environment}-${Environment}-codepipeline-role
+      RoleName: !Sub ${AWS::StackName}-${Environment}-codepipeline-role
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
@@ -106,7 +106,7 @@ Resources:
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
-      ServiceRole: !ImportValue CodeBuildRole
+      ServiceRole: !Ref CodeBuildRole
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
         EnvironmentVariables:
@@ -125,7 +125,7 @@ Resources:
     Type: AWS::CodePipeline::Pipeline
     Properties:
       Name: !Sub ${AppName}-${Environment}-pipeline
-      RoleArn: !ImportValue CodePipelineRole
+      RoleArn: !Ref CodePipelineRole
       ArtifactStore:
         Location: !Ref CodePipelineBucket
         Type: S3
@@ -161,7 +161,7 @@ Resources:
               Configuration:
                 ActionMode: CREATE_UPDATE
                 Capabilities: CAPABILITY_NAMED_IAM
-                RoleArn: !ImportValue CloudFormationRole
+                RoleArn: !Ref CloudFormationRole
                 StackName: !Sub ${AWS::StackName}
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/pipeline/pipeline-prod.yaml
                 ParameterOverrides: !Sub |
@@ -174,23 +174,7 @@ Resources:
                     "GitHubToken" : "${GitHubToken}"
                   }
               RunOrder: 1
-
-            - Name: GlobalResources
-              ActionTypeId:
-                Category: Deploy
-                Owner: AWS
-                Provider: CloudFormation
-                Version: '1'
-              InputArtifacts:
-                - Name: SourceCodeOutputArtifact
-              Configuration:
-                ActionMode: CREATE_UPDATE
-                Capabilities: CAPABILITY_NAMED_IAM
-                RoleArn: !ImportValue CloudFormationRole
-                StackName: global
-                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/global/global.yaml
-              RunOrder: 2
-
+              
             - Name: UpdateVpcStack
               ActionTypeId:
                 Category: Deploy
@@ -202,7 +186,7 @@ Resources:
               Configuration:
                 ActionMode: CREATE_UPDATE
                 Capabilities: CAPABILITY_NAMED_IAM
-                RoleArn: !ImportValue CloudFormationRole
+                RoleArn: !Ref CloudFormationRole
                 StackName: !Sub ${AppName}-${Environment}-vpc
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/infra/vpc.yaml
                 ParameterOverrides: !Sub |
