shorten private-nlb name, add global stack

--- a/configuration/cloudformation/infra/vpc.yaml
+++ b/configuration/cloudformation/infra/vpc.yaml
@@ -135,7 +135,7 @@ Resources:
     Properties:
       Type: network
       Scheme: internal
-      Name: !Sub "${AppName}-${Environment}-private-nlb"
+      Name: !Sub "${AppName}-${Environment}-nlb"
       Subnets:
         - !Ref PrivateSubnetOne
 
