--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -162,7 +162,7 @@ Resources:
               InputArtifacts:
                 - Name: SourceCodeOutputArtifact
               Configuration:
-                ActionMode: CHANGE_SET_REPLACE
+                ActionMode: CREATE_UPDATE
                 Capabilities: CAPABILITY_NAMED_IAM
                 RoleArn: !GetAtt CloudFormationRole.Arn
                 StackName: !Sub ${AWS::StackName}
@@ -178,20 +178,6 @@ Resources:
                   }
               RunOrder: 1
 
-            - Name: ExecuteChangeSetPipeline
-              ActionTypeId:
-                Category: Deploy
-                Owner: AWS
-                Provider: CloudFormation
-                Version: '1'
-              Configuration:
-                ActionMode: CHANGE_SET_EXECUTE
-                ChangeSetName: pipelinechangeset
-                RoleArn: !GetAtt CloudFormationRole.Arn
-                StackName: !Sub ${AWS::StackName}
-                Capabilities: CAPABILITY_IAM
-              RunOrder: 2
-
             - Name: GlobalResources
               ActionTypeId:
                 Category: Deploy
@@ -206,7 +192,7 @@ Resources:
                 RoleArn: !GetAtt CloudFormationRole.Arn
                 StackName: global
                 TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/global/global.yaml
-              RunOrder: 3
+              RunOrder: 2
 
 
             - Name: UpdateVpcStack
