--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,24 +4,44 @@ phases:
   install:
     runtime-versions:
       nodejs: 14
-    commands:
-      - echo Installing Mocha...
-      - cd server
-      - npm install -g mocha
+       commands:
+         - aws --version
+         - sudo apt-get update
+         - NODE_ENV=$NODE_ENV
+         - echo node port
+         - NODE_PORT=$NODE_PORT
+         - echo image uri
+         - echo $IMAGE_URI
+         - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION  | cut -c 1-7)
+         - echo Image tag
+         - echo ${IMAGE_TAG}
+
   pre_build:
     commands:
-      - echo Installing source NPM dependencies...
-      - cd server 
-      - npm install
+      - node --version
+      - docker --version
+      - echo Logging in to Amazon ECR...
+      - $(aws ecr get-login --no-include-email --region $AWS_REGION)
+      - echo Installing Mocha...
+      - npm install -g mocha
+      #- npm run test
   build:
     commands:
       - echo Build started on `date`
-      - echo Compiling the Node.js code
-      #- npm run test
+      - echo Building images...
+      - docker build -t $IMAGE_URI:$IMAGE_TAG -f configuration/Docker/Dockerfile
+      - echo Tag the docker image
+      - docker tag ${IMAGE_URI}:$IMAGE_TAG
+
   post_build:
     commands:
       - echo Build completed on `date`
+      - echo Push image to ECR
+      - docker push $IMAGE_URI
+      - printf '[{"name":"ihelp-server","imageUri":"%s"}]' $IMAGE_URI:$IMAGE_TAG > imagedefinitions.json
+      - cat imagedefinitions.json
+
 # Include only the files required for your application to run.
 artifacts:
   files:
-    - '**/*'
+    - imagedefinitions.json
