--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -222,7 +222,28 @@ Resources:
                     "AppName" : "${AppName}"
                   }
               RunOrder: 3
-        
+
+            - Name: UpdateECS
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              InputArtifacts:
+                - Name: SourceCodeOutputArtifact
+              Configuration:
+                ActionMode: CREATE_UPDATE
+                Capabilities: CAPABILITY_NAMED_IAM
+                RoleArn: !GetAtt CloudFormationRole.Arn
+                StackName: !Sub ${AppName}-${Environment}-ecs
+                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/infra/ecs.yaml
+                ParameterOverrides: !Sub |
+                  {
+                    "Environment": "${Environment}",
+                    "AppName" : "${AppName}"
+                  }
+              RunOrder: 3
+
         - Name: Build
           Actions:
             - Name: CodeBuild
