--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,7 +38,7 @@ phases:
       - echo Build completed on `date`
       - echo Push image to ECR
       - docker push ${IMAGE_URI}:{IMAGE_TAG}
-      - printf '[{"name":"ihelp-server","imageUri":"%s"}]' ${IMAGE_URI}:${I}MAGE_TAG} > imagedefinitions.json
+      - printf '[{"name":"ihelp-server","imageUri":"%s"}]' ${IMAGE_URI}:${IMAGE_TAG} > imagedefinitions.json
       - cat imagedefinitions.json
 
 # Include only the files required for your application to run.
