--- a/configuration/Docker/Dockerfile
+++ b/configuration/Docker/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:14
+ARG NODE_IMAGE=node:10
+
+FROM ${NODE_IMAGE}
 
 # Create app directory
 RUN mkdir -p /usr/src/app
@@ -10,12 +12,12 @@ WORKDIR /usr/src/app
 # where available (npm@5+)
 
 # Copy required packages to image, node_modules should be included in .gitignore
-COPY server/* ./
+COPY server ./
 
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
 
-EXPOSE 8001
+EXPOSE 3001
 
 CMD [ "node", "server.js" ]
