--- a/configuration/cloudformation/infra/ecs.yaml
+++ b/configuration/cloudformation/infra/ecs.yaml
@@ -16,7 +16,7 @@ Resources:
   NodeECR:
     Type: AWS::ECR::Repository
     Properties:
-      RepositoryName: !Sub node
+      RepositoryName: node
 
   ImageECR:
     Type: AWS::ECR::Repository
